Add login User and unit tests.