@@ -55,6 +55,9 @@
                 <version>3.0.0-M5</version> <!-- Adjust version as needed -->
                 <configuration>
                     <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
